--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   hive_flutter: ^1.1.0
   hive_generator: ^2.0.1
   google_fonts: ^6.2.1
+  provider: ^6.1.5
 
 dev_dependencies:
   flutter_test:
