--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   hive_generator: ^2.0.1
   google_fonts: ^6.2.1
   provider: ^6.1.5
+  flutter_bloc: ^9.1.1
 
 dev_dependencies:
   flutter_test:
